test_outputs/connlist/core_pods_without_host_ip_connlist_output.txt
0.0.0.0-255.255.255.255 => default/cog-agents-analyzer[DaemonSet] : All Connections
0.0.0.0-255.255.255.255 => default/cog-agents[DaemonSet] : All Connections
0.0.0.0-255.255.255.255 => default/cog-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
0.0.0.0-255.255.255.255 => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
0.0.0.0-255.255.255.255 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
0.0.0.0-255.255.255.255 => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
0.0.0.0-255.255.255.255 => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
0.0.0.0-255.255.255.255 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
0.0.0.0-255.255.255.255 => kube-system/calico-node-frontend[DaemonSet] : All Connections
0.0.0.0-255.255.255.255 => kube-system/calico-node[DaemonSet] : All Connections
0.0.0.0-255.255.255.255 => kube-system/file-plugin-7bfb8b69bf[ReplicaSet] : All Connections
0.0.0.0-255.255.255.255 => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
0.0.0.0-255.255.255.255 => kube-system/keepalived-watcher-not-frontend[DaemonSet] : All Connections
0.0.0.0-255.255.255.255 => kube-system/keepalived-watcher[DaemonSet] : All Connections
0.0.0.0-255.255.255.255 => kube-system/kube-fluentd-frontend[DaemonSet] : All Connections
0.0.0.0-255.255.255.255 => kube-system/kube-fluentd[DaemonSet] : All Connections
0.0.0.0-255.255.255.255 => kube-system/storage-watcher-8494b4b8bb[ReplicaSet] : All Connections
0.0.0.0-255.255.255.255 => kube-system/tiller-deploy-5c45c9966b[ReplicaSet] : All Connections
0.0.0.0-255.255.255.255 => kube-system/vpn-858f6d9777[ReplicaSet] : All Connections
0.0.0.0-255.255.255.255 => vendor-system/barbar-app[ReplicaSet] : All Connections
0.0.0.0-255.255.255.255 => vendor-system/foofoo-app[ReplicaSet] : All Connections
default/cog-agents-analyzer[DaemonSet] => 0.0.0.0-255.255.255.255 : All Connections
default/cog-agents-analyzer[DaemonSet] => default/cog-agents[DaemonSet] : All Connections
default/cog-agents-analyzer[DaemonSet] => default/cog-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
default/cog-agents-analyzer[DaemonSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
default/cog-agents-analyzer[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
default/cog-agents-analyzer[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
default/cog-agents-analyzer[DaemonSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
default/cog-agents-analyzer[DaemonSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
default/cog-agents-analyzer[DaemonSet] => kube-system/calico-node-frontend[DaemonSet] : All Connections
default/cog-agents-analyzer[DaemonSet] => kube-system/calico-node[DaemonSet] : All Connections
default/cog-agents-analyzer[DaemonSet] => kube-system/file-plugin-7bfb8b69bf[ReplicaSet] : All Connections
default/cog-agents-analyzer[DaemonSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
default/cog-agents-analyzer[DaemonSet] => kube-system/keepalived-watcher-not-frontend[DaemonSet] : All Connections
default/cog-agents-analyzer[DaemonSet] => kube-system/keepalived-watcher[DaemonSet] : All Connections
default/cog-agents-analyzer[DaemonSet] => kube-system/kube-fluentd-frontend[DaemonSet] : All Connections
default/cog-agents-analyzer[DaemonSet] => kube-system/kube-fluentd[DaemonSet] : All Connections
default/cog-agents-analyzer[DaemonSet] => kube-system/storage-watcher-8494b4b8bb[ReplicaSet] : All Connections
default/cog-agents-analyzer[DaemonSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet] : All Connections
default/cog-agents-analyzer[DaemonSet] => kube-system/vpn-858f6d9777[ReplicaSet] : All Connections
default/cog-agents-analyzer[DaemonSet] => vendor-system/barbar-app[ReplicaSet] : All Connections
default/cog-agents-analyzer[DaemonSet] => vendor-system/foofoo-app[ReplicaSet] : All Connections
default/cog-agents[DaemonSet] => 0.0.0.0-255.255.255.255 : All Connections
default/cog-agents[DaemonSet] => default/cog-agents-analyzer[DaemonSet] : All Connections
default/cog-agents[DaemonSet] => default/cog-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
default/cog-agents[DaemonSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
default/cog-agents[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
default/cog-agents[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
default/cog-agents[DaemonSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
default/cog-agents[DaemonSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
default/cog-agents[DaemonSet] => kube-system/calico-node-frontend[DaemonSet] : All Connections
default/cog-agents[DaemonSet] => kube-system/calico-node[DaemonSet] : All Connections
default/cog-agents[DaemonSet] => kube-system/file-plugin-7bfb8b69bf[ReplicaSet] : All Connections
default/cog-agents[DaemonSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
default/cog-agents[DaemonSet] => kube-system/keepalived-watcher-not-frontend[DaemonSet] : All Connections
default/cog-agents[DaemonSet] => kube-system/keepalived-watcher[DaemonSet] : All Connections
default/cog-agents[DaemonSet] => kube-system/kube-fluentd-frontend[DaemonSet] : All Connections
default/cog-agents[DaemonSet] => kube-system/kube-fluentd[DaemonSet] : All Connections
default/cog-agents[DaemonSet] => kube-system/storage-watcher-8494b4b8bb[ReplicaSet] : All Connections
default/cog-agents[DaemonSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet] : All Connections
default/cog-agents[DaemonSet] => kube-system/vpn-858f6d9777[ReplicaSet] : All Connections
default/cog-agents[DaemonSet] => vendor-system/barbar-app[ReplicaSet] : All Connections
default/cog-agents[DaemonSet] => vendor-system/foofoo-app[ReplicaSet] : All Connections
default/cog-local-analyzer-7d77fb55cc[ReplicaSet] => 0.0.0.0-255.255.255.255 : All Connections
default/cog-local-analyzer-7d77fb55cc[ReplicaSet] => default/cog-agents-analyzer[DaemonSet] : All Connections
default/cog-local-analyzer-7d77fb55cc[ReplicaSet] => default/cog-agents[DaemonSet] : All Connections
default/cog-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
default/cog-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
default/cog-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
default/cog-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
default/cog-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
default/cog-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system/calico-node-frontend[DaemonSet] : All Connections
default/cog-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system/calico-node[DaemonSet] : All Connections
default/cog-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system/file-plugin-7bfb8b69bf[ReplicaSet] : All Connections
default/cog-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
default/cog-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system/keepalived-watcher-not-frontend[DaemonSet] : All Connections
default/cog-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system/keepalived-watcher[DaemonSet] : All Connections
default/cog-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system/kube-fluentd-frontend[DaemonSet] : All Connections
default/cog-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system/kube-fluentd[DaemonSet] : All Connections
default/cog-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system/storage-watcher-8494b4b8bb[ReplicaSet] : All Connections
default/cog-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet] : All Connections
default/cog-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system/vpn-858f6d9777[ReplicaSet] : All Connections
default/cog-local-analyzer-7d77fb55cc[ReplicaSet] => vendor-system/barbar-app[ReplicaSet] : All Connections
default/cog-local-analyzer-7d77fb55cc[ReplicaSet] => vendor-system/foofoo-app[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => 0.0.0.0-255.255.255.255 : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => default/cog-agents-analyzer[DaemonSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => default/cog-agents[DaemonSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => default/cog-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system/calico-node-frontend[DaemonSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system/file-plugin-7bfb8b69bf[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system/keepalived-watcher-not-frontend[DaemonSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system/keepalived-watcher[DaemonSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system/kube-fluentd-frontend[DaemonSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system/kube-fluentd[DaemonSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system/storage-watcher-8494b4b8bb[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system/vpn-858f6d9777[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => vendor-system/barbar-app[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => vendor-system/foofoo-app[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => 0.0.0.0-255.255.255.255 : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => default/cog-agents-analyzer[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => default/cog-agents[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => default/cog-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system/calico-node-frontend[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system/file-plugin-7bfb8b69bf[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system/keepalived-watcher-not-frontend[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system/keepalived-watcher[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system/kube-fluentd-frontend[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system/kube-fluentd[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system/storage-watcher-8494b4b8bb[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system/vpn-858f6d9777[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => vendor-system/barbar-app[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => vendor-system/foofoo-app[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => 0.0.0.0-255.255.255.255 : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => default/cog-agents-analyzer[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => default/cog-agents[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => default/cog-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system/calico-node-frontend[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system/file-plugin-7bfb8b69bf[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system/keepalived-watcher-not-frontend[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system/keepalived-watcher[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system/kube-fluentd-frontend[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system/kube-fluentd[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system/storage-watcher-8494b4b8bb[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system/vpn-858f6d9777[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => vendor-system/barbar-app[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => vendor-system/foofoo-app[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => 0.0.0.0-255.255.255.255 : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => default/cog-agents-analyzer[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => default/cog-agents[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => default/cog-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system/calico-node-frontend[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system/file-plugin-7bfb8b69bf[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system/keepalived-watcher-not-frontend[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system/keepalived-watcher[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system/kube-fluentd-frontend[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system/kube-fluentd[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system/storage-watcher-8494b4b8bb[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system/vpn-858f6d9777[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => vendor-system/barbar-app[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => vendor-system/foofoo-app[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => 0.0.0.0-255.255.255.255 : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => default/cog-agents-analyzer[DaemonSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => default/cog-agents[DaemonSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => default/cog-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system/calico-node-frontend[DaemonSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system/file-plugin-7bfb8b69bf[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system/keepalived-watcher-not-frontend[DaemonSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system/keepalived-watcher[DaemonSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system/kube-fluentd-frontend[DaemonSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system/kube-fluentd[DaemonSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system/storage-watcher-8494b4b8bb[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system/vpn-858f6d9777[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => vendor-system/barbar-app[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => vendor-system/foofoo-app[ReplicaSet] : All Connections
kube-system/calico-node-frontend[DaemonSet] => 0.0.0.0-255.255.255.255 : All Connections
kube-system/calico-node-frontend[DaemonSet] => default/cog-agents-analyzer[DaemonSet] : All Connections
kube-system/calico-node-frontend[DaemonSet] => default/cog-agents[DaemonSet] : All Connections
kube-system/calico-node-frontend[DaemonSet] => default/cog-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system/calico-node-frontend[DaemonSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
kube-system/calico-node-frontend[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
kube-system/calico-node-frontend[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
kube-system/calico-node-frontend[DaemonSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
kube-system/calico-node-frontend[DaemonSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
kube-system/calico-node-frontend[DaemonSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system/calico-node-frontend[DaemonSet] => kube-system/file-plugin-7bfb8b69bf[ReplicaSet] : All Connections
kube-system/calico-node-frontend[DaemonSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
kube-system/calico-node-frontend[DaemonSet] => kube-system/keepalived-watcher-not-frontend[DaemonSet] : All Connections
kube-system/calico-node-frontend[DaemonSet] => kube-system/keepalived-watcher[DaemonSet] : All Connections
kube-system/calico-node-frontend[DaemonSet] => kube-system/kube-fluentd-frontend[DaemonSet] : All Connections
kube-system/calico-node-frontend[DaemonSet] => kube-system/kube-fluentd[DaemonSet] : All Connections
kube-system/calico-node-frontend[DaemonSet] => kube-system/storage-watcher-8494b4b8bb[ReplicaSet] : All Connections
kube-system/calico-node-frontend[DaemonSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet] : All Connections
kube-system/calico-node-frontend[DaemonSet] => kube-system/vpn-858f6d9777[ReplicaSet] : All Connections
kube-system/calico-node-frontend[DaemonSet] => vendor-system/barbar-app[ReplicaSet] : All Connections
kube-system/calico-node-frontend[DaemonSet] => vendor-system/foofoo-app[ReplicaSet] : All Connections
kube-system/calico-node[DaemonSet] => 0.0.0.0-255.255.255.255 : All Connections
kube-system/calico-node[DaemonSet] => default/cog-agents-analyzer[DaemonSet] : All Connections
kube-system/calico-node[DaemonSet] => default/cog-agents[DaemonSet] : All Connections
kube-system/calico-node[DaemonSet] => default/cog-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system/calico-node[DaemonSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
kube-system/calico-node[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
kube-system/calico-node[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
kube-system/calico-node[DaemonSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
kube-system/calico-node[DaemonSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
kube-system/calico-node[DaemonSet] => kube-system/calico-node-frontend[DaemonSet] : All Connections
kube-system/calico-node[DaemonSet] => kube-system/file-plugin-7bfb8b69bf[ReplicaSet] : All Connections
kube-system/calico-node[DaemonSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
kube-system/calico-node[DaemonSet] => kube-system/keepalived-watcher-not-frontend[DaemonSet] : All Connections
kube-system/calico-node[DaemonSet] => kube-system/keepalived-watcher[DaemonSet] : All Connections
kube-system/calico-node[DaemonSet] => kube-system/kube-fluentd-frontend[DaemonSet] : All Connections
kube-system/calico-node[DaemonSet] => kube-system/kube-fluentd[DaemonSet] : All Connections
kube-system/calico-node[DaemonSet] => kube-system/storage-watcher-8494b4b8bb[ReplicaSet] : All Connections
kube-system/calico-node[DaemonSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet] : All Connections
kube-system/calico-node[DaemonSet] => kube-system/vpn-858f6d9777[ReplicaSet] : All Connections
kube-system/calico-node[DaemonSet] => vendor-system/barbar-app[ReplicaSet] : All Connections
kube-system/calico-node[DaemonSet] => vendor-system/foofoo-app[ReplicaSet] : All Connections
kube-system/file-plugin-7bfb8b69bf[ReplicaSet] => 0.0.0.0-255.255.255.255 : All Connections
kube-system/file-plugin-7bfb8b69bf[ReplicaSet] => default/cog-agents-analyzer[DaemonSet] : All Connections
kube-system/file-plugin-7bfb8b69bf[ReplicaSet] => default/cog-agents[DaemonSet] : All Connections
kube-system/file-plugin-7bfb8b69bf[ReplicaSet] => default/cog-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system/file-plugin-7bfb8b69bf[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
kube-system/file-plugin-7bfb8b69bf[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
kube-system/file-plugin-7bfb8b69bf[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
kube-system/file-plugin-7bfb8b69bf[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
kube-system/file-plugin-7bfb8b69bf[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
kube-system/file-plugin-7bfb8b69bf[ReplicaSet] => kube-system/calico-node-frontend[DaemonSet] : All Connections
kube-system/file-plugin-7bfb8b69bf[ReplicaSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system/file-plugin-7bfb8b69bf[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
kube-system/file-plugin-7bfb8b69bf[ReplicaSet] => kube-system/keepalived-watcher-not-frontend[DaemonSet] : All Connections
kube-system/file-plugin-7bfb8b69bf[ReplicaSet] => kube-system/keepalived-watcher[DaemonSet] : All Connections
kube-system/file-plugin-7bfb8b69bf[ReplicaSet] => kube-system/kube-fluentd-frontend[DaemonSet] : All Connections
kube-system/file-plugin-7bfb8b69bf[ReplicaSet] => kube-system/kube-fluentd[DaemonSet] : All Connections
kube-system/file-plugin-7bfb8b69bf[ReplicaSet] => kube-system/storage-watcher-8494b4b8bb[ReplicaSet] : All Connections
kube-system/file-plugin-7bfb8b69bf[ReplicaSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet] : All Connections
kube-system/file-plugin-7bfb8b69bf[ReplicaSet] => kube-system/vpn-858f6d9777[ReplicaSet] : All Connections
kube-system/file-plugin-7bfb8b69bf[ReplicaSet] => vendor-system/barbar-app[ReplicaSet] : All Connections
kube-system/file-plugin-7bfb8b69bf[ReplicaSet] => vendor-system/foofoo-app[ReplicaSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => 0.0.0.0-255.255.255.255 : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => default/cog-agents-analyzer[DaemonSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => default/cog-agents[DaemonSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => default/cog-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system/calico-node-frontend[DaemonSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system/file-plugin-7bfb8b69bf[ReplicaSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system/keepalived-watcher-not-frontend[DaemonSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system/keepalived-watcher[DaemonSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system/kube-fluentd-frontend[DaemonSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system/kube-fluentd[DaemonSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system/storage-watcher-8494b4b8bb[ReplicaSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system/vpn-858f6d9777[ReplicaSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => vendor-system/barbar-app[ReplicaSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => vendor-system/foofoo-app[ReplicaSet] : All Connections
kube-system/keepalived-watcher-not-frontend[DaemonSet] => 0.0.0.0-255.255.255.255 : All Connections
kube-system/keepalived-watcher-not-frontend[DaemonSet] => default/cog-agents-analyzer[DaemonSet] : All Connections
kube-system/keepalived-watcher-not-frontend[DaemonSet] => default/cog-agents[DaemonSet] : All Connections
kube-system/keepalived-watcher-not-frontend[DaemonSet] => default/cog-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system/keepalived-watcher-not-frontend[DaemonSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
kube-system/keepalived-watcher-not-frontend[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
kube-system/keepalived-watcher-not-frontend[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
kube-system/keepalived-watcher-not-frontend[DaemonSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
kube-system/keepalived-watcher-not-frontend[DaemonSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
kube-system/keepalived-watcher-not-frontend[DaemonSet] => kube-system/calico-node-frontend[DaemonSet] : All Connections
kube-system/keepalived-watcher-not-frontend[DaemonSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system/keepalived-watcher-not-frontend[DaemonSet] => kube-system/file-plugin-7bfb8b69bf[ReplicaSet] : All Connections
kube-system/keepalived-watcher-not-frontend[DaemonSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
kube-system/keepalived-watcher-not-frontend[DaemonSet] => kube-system/keepalived-watcher[DaemonSet] : All Connections
kube-system/keepalived-watcher-not-frontend[DaemonSet] => kube-system/kube-fluentd-frontend[DaemonSet] : All Connections
kube-system/keepalived-watcher-not-frontend[DaemonSet] => kube-system/kube-fluentd[DaemonSet] : All Connections
kube-system/keepalived-watcher-not-frontend[DaemonSet] => kube-system/storage-watcher-8494b4b8bb[ReplicaSet] : All Connections
kube-system/keepalived-watcher-not-frontend[DaemonSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet] : All Connections
kube-system/keepalived-watcher-not-frontend[DaemonSet] => kube-system/vpn-858f6d9777[ReplicaSet] : All Connections
kube-system/keepalived-watcher-not-frontend[DaemonSet] => vendor-system/barbar-app[ReplicaSet] : All Connections
kube-system/keepalived-watcher-not-frontend[DaemonSet] => vendor-system/foofoo-app[ReplicaSet] : All Connections
kube-system/keepalived-watcher[DaemonSet] => 0.0.0.0-255.255.255.255 : All Connections
kube-system/keepalived-watcher[DaemonSet] => default/cog-agents-analyzer[DaemonSet] : All Connections
kube-system/keepalived-watcher[DaemonSet] => default/cog-agents[DaemonSet] : All Connections
kube-system/keepalived-watcher[DaemonSet] => default/cog-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system/keepalived-watcher[DaemonSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
kube-system/keepalived-watcher[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
kube-system/keepalived-watcher[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
kube-system/keepalived-watcher[DaemonSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
kube-system/keepalived-watcher[DaemonSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
kube-system/keepalived-watcher[DaemonSet] => kube-system/calico-node-frontend[DaemonSet] : All Connections
kube-system/keepalived-watcher[DaemonSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system/keepalived-watcher[DaemonSet] => kube-system/file-plugin-7bfb8b69bf[ReplicaSet] : All Connections
kube-system/keepalived-watcher[DaemonSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
kube-system/keepalived-watcher[DaemonSet] => kube-system/keepalived-watcher-not-frontend[DaemonSet] : All Connections
kube-system/keepalived-watcher[DaemonSet] => kube-system/kube-fluentd-frontend[DaemonSet] : All Connections
kube-system/keepalived-watcher[DaemonSet] => kube-system/kube-fluentd[DaemonSet] : All Connections
kube-system/keepalived-watcher[DaemonSet] => kube-system/storage-watcher-8494b4b8bb[ReplicaSet] : All Connections
kube-system/keepalived-watcher[DaemonSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet] : All Connections
kube-system/keepalived-watcher[DaemonSet] => kube-system/vpn-858f6d9777[ReplicaSet] : All Connections
kube-system/keepalived-watcher[DaemonSet] => vendor-system/barbar-app[ReplicaSet] : All Connections
kube-system/keepalived-watcher[DaemonSet] => vendor-system/foofoo-app[ReplicaSet] : All Connections
kube-system/kube-fluentd-frontend[DaemonSet] => 0.0.0.0-255.255.255.255 : All Connections
kube-system/kube-fluentd-frontend[DaemonSet] => default/cog-agents-analyzer[DaemonSet] : All Connections
kube-system/kube-fluentd-frontend[DaemonSet] => default/cog-agents[DaemonSet] : All Connections
kube-system/kube-fluentd-frontend[DaemonSet] => default/cog-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system/kube-fluentd-frontend[DaemonSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
kube-system/kube-fluentd-frontend[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
kube-system/kube-fluentd-frontend[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
kube-system/kube-fluentd-frontend[DaemonSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
kube-system/kube-fluentd-frontend[DaemonSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
kube-system/kube-fluentd-frontend[DaemonSet] => kube-system/calico-node-frontend[DaemonSet] : All Connections
kube-system/kube-fluentd-frontend[DaemonSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system/kube-fluentd-frontend[DaemonSet] => kube-system/file-plugin-7bfb8b69bf[ReplicaSet] : All Connections
kube-system/kube-fluentd-frontend[DaemonSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
kube-system/kube-fluentd-frontend[DaemonSet] => kube-system/keepalived-watcher-not-frontend[DaemonSet] : All Connections
kube-system/kube-fluentd-frontend[DaemonSet] => kube-system/keepalived-watcher[DaemonSet] : All Connections
kube-system/kube-fluentd-frontend[DaemonSet] => kube-system/kube-fluentd[DaemonSet] : All Connections
kube-system/kube-fluentd-frontend[DaemonSet] => kube-system/storage-watcher-8494b4b8bb[ReplicaSet] : All Connections
kube-system/kube-fluentd-frontend[DaemonSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet] : All Connections
kube-system/kube-fluentd-frontend[DaemonSet] => kube-system/vpn-858f6d9777[ReplicaSet] : All Connections
kube-system/kube-fluentd-frontend[DaemonSet] => vendor-system/barbar-app[ReplicaSet] : All Connections
kube-system/kube-fluentd-frontend[DaemonSet] => vendor-system/foofoo-app[ReplicaSet] : All Connections
kube-system/kube-fluentd[DaemonSet] => 0.0.0.0-255.255.255.255 : All Connections
kube-system/kube-fluentd[DaemonSet] => default/cog-agents-analyzer[DaemonSet] : All Connections
kube-system/kube-fluentd[DaemonSet] => default/cog-agents[DaemonSet] : All Connections
kube-system/kube-fluentd[DaemonSet] => default/cog-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system/kube-fluentd[DaemonSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
kube-system/kube-fluentd[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
kube-system/kube-fluentd[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
kube-system/kube-fluentd[DaemonSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
kube-system/kube-fluentd[DaemonSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
kube-system/kube-fluentd[DaemonSet] => kube-system/calico-node-frontend[DaemonSet] : All Connections
kube-system/kube-fluentd[DaemonSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system/kube-fluentd[DaemonSet] => kube-system/file-plugin-7bfb8b69bf[ReplicaSet] : All Connections
kube-system/kube-fluentd[DaemonSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
kube-system/kube-fluentd[DaemonSet] => kube-system/keepalived-watcher-not-frontend[DaemonSet] : All Connections
kube-system/kube-fluentd[DaemonSet] => kube-system/keepalived-watcher[DaemonSet] : All Connections
kube-system/kube-fluentd[DaemonSet] => kube-system/kube-fluentd-frontend[DaemonSet] : All Connections
kube-system/kube-fluentd[DaemonSet] => kube-system/storage-watcher-8494b4b8bb[ReplicaSet] : All Connections
kube-system/kube-fluentd[DaemonSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet] : All Connections
kube-system/kube-fluentd[DaemonSet] => kube-system/vpn-858f6d9777[ReplicaSet] : All Connections
kube-system/kube-fluentd[DaemonSet] => vendor-system/barbar-app[ReplicaSet] : All Connections
kube-system/kube-fluentd[DaemonSet] => vendor-system/foofoo-app[ReplicaSet] : All Connections
kube-system/storage-watcher-8494b4b8bb[ReplicaSet] => 0.0.0.0-255.255.255.255 : All Connections
kube-system/storage-watcher-8494b4b8bb[ReplicaSet] => default/cog-agents-analyzer[DaemonSet] : All Connections
kube-system/storage-watcher-8494b4b8bb[ReplicaSet] => default/cog-agents[DaemonSet] : All Connections
kube-system/storage-watcher-8494b4b8bb[ReplicaSet] => default/cog-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system/storage-watcher-8494b4b8bb[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
kube-system/storage-watcher-8494b4b8bb[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
kube-system/storage-watcher-8494b4b8bb[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
kube-system/storage-watcher-8494b4b8bb[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
kube-system/storage-watcher-8494b4b8bb[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
kube-system/storage-watcher-8494b4b8bb[ReplicaSet] => kube-system/calico-node-frontend[DaemonSet] : All Connections
kube-system/storage-watcher-8494b4b8bb[ReplicaSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system/storage-watcher-8494b4b8bb[ReplicaSet] => kube-system/file-plugin-7bfb8b69bf[ReplicaSet] : All Connections
kube-system/storage-watcher-8494b4b8bb[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
kube-system/storage-watcher-8494b4b8bb[ReplicaSet] => kube-system/keepalived-watcher-not-frontend[DaemonSet] : All Connections
kube-system/storage-watcher-8494b4b8bb[ReplicaSet] => kube-system/keepalived-watcher[DaemonSet] : All Connections
kube-system/storage-watcher-8494b4b8bb[ReplicaSet] => kube-system/kube-fluentd-frontend[DaemonSet] : All Connections
kube-system/storage-watcher-8494b4b8bb[ReplicaSet] => kube-system/kube-fluentd[DaemonSet] : All Connections
kube-system/storage-watcher-8494b4b8bb[ReplicaSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet] : All Connections
kube-system/storage-watcher-8494b4b8bb[ReplicaSet] => kube-system/vpn-858f6d9777[ReplicaSet] : All Connections
kube-system/storage-watcher-8494b4b8bb[ReplicaSet] => vendor-system/barbar-app[ReplicaSet] : All Connections
kube-system/storage-watcher-8494b4b8bb[ReplicaSet] => vendor-system/foofoo-app[ReplicaSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => 0.0.0.0-255.255.255.255 : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => default/cog-agents-analyzer[DaemonSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => default/cog-agents[DaemonSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => default/cog-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system/calico-node-frontend[DaemonSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system/file-plugin-7bfb8b69bf[ReplicaSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system/keepalived-watcher-not-frontend[DaemonSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system/keepalived-watcher[DaemonSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system/kube-fluentd-frontend[DaemonSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system/kube-fluentd[DaemonSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system/storage-watcher-8494b4b8bb[ReplicaSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system/vpn-858f6d9777[ReplicaSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => vendor-system/barbar-app[ReplicaSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => vendor-system/foofoo-app[ReplicaSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => 0.0.0.0-255.255.255.255 : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => default/cog-agents-analyzer[DaemonSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => default/cog-agents[DaemonSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => default/cog-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system/calico-node-frontend[DaemonSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system/file-plugin-7bfb8b69bf[ReplicaSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system/keepalived-watcher-not-frontend[DaemonSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system/keepalived-watcher[DaemonSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system/kube-fluentd-frontend[DaemonSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system/kube-fluentd[DaemonSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system/storage-watcher-8494b4b8bb[ReplicaSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => vendor-system/barbar-app[ReplicaSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => vendor-system/foofoo-app[ReplicaSet] : All Connections
vendor-system/barbar-app[ReplicaSet] => 0.0.0.0-255.255.255.255 : All Connections
vendor-system/barbar-app[ReplicaSet] => default/cog-agents-analyzer[DaemonSet] : All Connections
vendor-system/barbar-app[ReplicaSet] => default/cog-agents[DaemonSet] : All Connections
vendor-system/barbar-app[ReplicaSet] => default/cog-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
vendor-system/barbar-app[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
vendor-system/barbar-app[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
vendor-system/barbar-app[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
vendor-system/barbar-app[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
vendor-system/barbar-app[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
vendor-system/barbar-app[ReplicaSet] => kube-system/calico-node-frontend[DaemonSet] : All Connections
vendor-system/barbar-app[ReplicaSet] => kube-system/calico-node[DaemonSet] : All Connections
vendor-system/barbar-app[ReplicaSet] => kube-system/file-plugin-7bfb8b69bf[ReplicaSet] : All Connections
vendor-system/barbar-app[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
vendor-system/barbar-app[ReplicaSet] => kube-system/keepalived-watcher-not-frontend[DaemonSet] : All Connections
vendor-system/barbar-app[ReplicaSet] => kube-system/keepalived-watcher[DaemonSet] : All Connections
vendor-system/barbar-app[ReplicaSet] => kube-system/kube-fluentd-frontend[DaemonSet] : All Connections
vendor-system/barbar-app[ReplicaSet] => kube-system/kube-fluentd[DaemonSet] : All Connections
vendor-system/barbar-app[ReplicaSet] => kube-system/storage-watcher-8494b4b8bb[ReplicaSet] : All Connections
vendor-system/barbar-app[ReplicaSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet] : All Connections
vendor-system/barbar-app[ReplicaSet] => kube-system/vpn-858f6d9777[ReplicaSet] : All Connections
vendor-system/barbar-app[ReplicaSet] => vendor-system/foofoo-app[ReplicaSet] : All Connections
vendor-system/foofoo-app[ReplicaSet] => 0.0.0.0-255.255.255.255 : All Connections
vendor-system/foofoo-app[ReplicaSet] => default/cog-agents-analyzer[DaemonSet] : All Connections
vendor-system/foofoo-app[ReplicaSet] => default/cog-agents[DaemonSet] : All Connections
vendor-system/foofoo-app[ReplicaSet] => default/cog-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
vendor-system/foofoo-app[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
vendor-system/foofoo-app[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
vendor-system/foofoo-app[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
vendor-system/foofoo-app[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
vendor-system/foofoo-app[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
vendor-system/foofoo-app[ReplicaSet] => kube-system/calico-node-frontend[DaemonSet] : All Connections
vendor-system/foofoo-app[ReplicaSet] => kube-system/calico-node[DaemonSet] : All Connections
vendor-system/foofoo-app[ReplicaSet] => kube-system/file-plugin-7bfb8b69bf[ReplicaSet] : All Connections
vendor-system/foofoo-app[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
vendor-system/foofoo-app[ReplicaSet] => kube-system/keepalived-watcher-not-frontend[DaemonSet] : All Connections
vendor-system/foofoo-app[ReplicaSet] => kube-system/keepalived-watcher[DaemonSet] : All Connections
vendor-system/foofoo-app[ReplicaSet] => kube-system/kube-fluentd-frontend[DaemonSet] : All Connections
vendor-system/foofoo-app[ReplicaSet] => kube-system/kube-fluentd[DaemonSet] : All Connections
vendor-system/foofoo-app[ReplicaSet] => kube-system/storage-watcher-8494b4b8bb[ReplicaSet] : All Connections
vendor-system/foofoo-app[ReplicaSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet] : All Connections
vendor-system/foofoo-app[ReplicaSet] => kube-system/vpn-858f6d9777[ReplicaSet] : All Connections
vendor-system/foofoo-app[ReplicaSet] => vendor-system/barbar-app[ReplicaSet] : All Connections
